@@ -132,6 +132,23 @@ public:
 		LPCTSTR Format();
 	};
 
+	struct PlaylistItem
+	{
+		CString					m_strFileName;
+		REFERENCE_TIME			m_rtIn;
+		REFERENCE_TIME			m_rtOut;
+
+		REFERENCE_TIME Duration()
+		{
+			return m_rtOut - m_rtIn;
+		}
+
+		bool operator == (const PlaylistItem& pi) const
+		{
+			return pi.m_strFileName == m_strFileName;
+		}
+	};
+
 	CHdmvClipInfo(void);
 
 	HRESULT		ReadInfo(LPCTSTR strFile);
@@ -140,7 +157,8 @@ public:
 	int			GetStreamNumber()			{ return int(m_Streams.GetCount()); };
 	Stream*		GetStreamByIndex(int nIndex){ return (unsigned(nIndex) < m_Streams.GetCount()) ? &m_Streams[nIndex] : NULL; };
 
-	HRESULT		FindMainMovie(LPCTSTR strFolder, CAtlList<CString>& MainPlaylist);
+	HRESULT		FindMainMovie(LPCTSTR strFolder, CString& strPlaylistFile, CAtlList<PlaylistItem>& MainPlaylist);
+	HRESULT		ReadPlaylist(CString strPlaylistFile, REFERENCE_TIME& rtDuration, CAtlList<PlaylistItem>& Playlist);
 
 private :
 	DWORD		SequenceInfo_start_address;
@@ -158,5 +176,4 @@ private :
 	void		ReadBuffer(BYTE* pBuff, int nLen);
 
 	HRESULT		ReadProgramInfo();
-	HRESULT		ReadPlaylist(LPCTSTR strPath, LPCTSTR strFile, REFERENCE_TIME& rtDuration, CAtlList<CString>& Playlist);
 };
